# Movie-Recommendations

./: .gitignore  CMakeLists.txt  LICENSE  README.md  movies.txt
docs/: Final Project CS2.docx
include/: CMakeLists.txt  DecisionTree.h  DecisionTreeNode.h  Movie.h
src/: CMakeLists.txt  DecisionTree.cpp  DecisionTreeNode.cpp  main.cpp
